src/test/deca/context/invalid/UnvalidTypeInit.deca
//Affectation de string a int

//Resultat: Erreur ligne 6

{
    int a = "2";
}
